# onc-co-scientist

./: .gitignore  LICENSE  README.md  gemma4_31b_caa_benchmark_plan.md  pyproject.toml  qwen35_9b_caa_benchmark_plan.md
configs/: providers.example.yaml  synthetic.example.yaml
data/caa/: clinical_all_claude_pubmed_realistic_pairs.jsonl  gemma4_31b_bf16_clinical_pubmed_layers20_30_40.json  gemma4_31b_bf16_clinical_pubmed_layers20_30_40.npz  qwen35_9b_bf16_clinical_pubmed_layers8_16_24.json  qwen35_9b_bf16_clinical_pubmed_layers8_16_24.npz
example_data_20_iterations/ds001/score/: batch_score.md
example_data_5_iterations/ds001/score/: batch_judgments.jsonl  batch_match_judgments.jsonl  batch_score.json  batch_score.md
example_data_all_claude/ds001/score/: batch_score.json  batch_score.md
example_data_all_codex/ds001/score/: batch_judgments.jsonl  batch_match_judgments.jsonl  batch_score.json  batch_score.md
example_data_clinical_all_claude/ds001/score/: batch_judgments.jsonl
example_data_depmap_5_replicates_10_iterations/score/: batch_judgments.jsonl  batch_match_judgments.jsonl  batch_score.json  batch_score.md
example_data_depmap_all_codex/score/: batch_judgments.jsonl  batch_match_judgments.jsonl  batch_score.json  batch_score.md
scripts/: resume.sh  run_all.sh  run_harness.sh
src/onc_co_scientist/: __init__.py  caa_ab.py  caa_server.py  cli.py
src/onc_open_mindedness/: __init__.py  cli.py
tests/: test_anonymize.py  test_buried.py  test_caa.py  test_caa_ab.py  test_caa_server.py  test_cancer_profiles.py  test_cli_multi_cancer.py  test_cli_score_batch.py  test_depmap_profile.py  test_distractors.py  test_end_to_end.py  test_generator.py  test_io.py  test_judge.py  test_matching.py  test_novelty.py  test_providers.py  test_run_harness_script.py  test_schemas.py  test_scoring.py  test_task_spec.py  test_transcript.py
tests/fixtures/: perfect_transcript.json
(+2304 files in other folders)
