[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "onc-co-scientist"
version = "0.1.0"
description = "Benchmark scaffolding for the Oncology Co-Scientist project (Aims 1.1 and 1.2)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Knowledge Systems Group, Dana-Farber Cancer Institute" },
]
keywords = [
  "oncology",
  "benchmark",
  "llm",
  "scientific-reasoning",
  "paradigm-bias",
]
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=16.0",
  "scipy",
  "statsmodels",
  "lifelines",
  "jsonschema"
]

[project.optional-dependencies]
# Pull in the upstream onc-causal-inference synthetic generator.
# Heavy ML deps (torch / transformers) come transitively; kept optional so
# tests and pure scoring workflows do not require a CUDA stack.
synthetic = [
  "onc-causal-inference @ git+https://github.com/kenlkehl/onc-causal-inference.git@main",
]
anthropic-vertex = [
  "anthropic[vertex]>=0.40",
]
vllm-openai = [
  "openai>=1.40",
]
interventions = [
  "torch>=2.4",
  "transformers>=4.50",
  "accelerate>=0.33",
]
providers = [
  "onc-co-scientist[anthropic-vertex,vllm-openai]",
]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[project.scripts]
ocs = "onc_co_scientist.cli:app"

[tool.hatch.metadata]
# Required because the `synthetic` extra references onc-causal-inference by git URL.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/onc_co_scientist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
